--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:create": "cd ./src/config/database/migrations && typeorm-ts-node-commonjs migration:create",
     "migration:run": "npm run typeorm migration:run -- -d ./src/config/database/datasource.ts",
-    "migration:revert": "npm run typeorm migration:revert -- -d ./src/config/database/datasource.ts"
+    "migration:revert": "npm run typeorm migration:revert -- -d ./src/config/database/datasource.ts",
+    "nest:generate": "nest g resource"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
